--- a/demo/explorer/src/FilePreviewer.module.css
+++ b/demo/explorer/src/FilePreviewer.module.css
@@ -6,6 +6,9 @@
   width: 50%;
   height: 100%;
   z-index: 1;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .closeIconWrap {
@@ -13,6 +16,18 @@
   top: 10px;
   right: 10px;
   cursor: pointer;
+}
+
+.textarea {
+  width: 100%;
+  flex: 1;
+  border: none;
+  outline: none;
+}
+
+.saveBtn {
+  margin: 4px;
+  width: 100%;
 }
 
 @media screen and (max-width: 700px) {
